--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
+alembic==1.11.1
+bcrypt==4.0.1
 blinker==1.6.2
 click==8.1.3
 Flask==2.3.2
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.5.2
+Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 load-dotenv==0.1.0
+Mako==1.2.4
 MarkupSafe==2.1.3
+mysqlclient==2.1.1
+PyJWT==2.7.0
 PyMySQL==1.0.3
 python-dotenv==1.0.0
+six==1.16.0
 SQLAlchemy==2.0.15
 typing_extensions==4.6.3
 Werkzeug==2.3.4
